[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oglbbs"
version = "0.0.0"
description = "A packet BBS"
requires-python = ">=3.10"
dependencies = [
    "paramiko",
    "cryptography",
    "pyham-pe",
    "pyfiglet",
]

[project.scripts]
oglbbs = "oglbbs.main:main"

[tool.ruff]
indent-width = 2
