[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oglbbs"
version = "1.0.1"
description = "A packet BBS"
requires-python = ">=3.10"
dependencies = [
    "paramiko",
    "cryptography",
    "pyham-pe",
    "pyfiglet",
]

[tool.setuptools]
packages = ["oglbbs"]

[project.scripts]
oglbbs = "oglbbs.main:main"

[tool.ruff]
indent-width = 2
